[package]
name = "ripwc"
version = "1.0.0"
edition = "2021"
authors = ["LuminousToaster", "https://github.com/LuminousToaster"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }

rayon = "1.10.0"
walkdir = "2.3.3"
num_cpus = "1.16.0"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3
panic = 'abort'
incremental = true
